--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.3.2"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.3.2",
+    "typescript": "^5.1.5"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "typescript": "^5.1.5"
+    "mysql2": "^3.4.2"
   }
 }
