--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.3.2",
     "typescript": "^5.1.5"
   },
